implemented mark up for 2 first slide (payment and login)

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test:watch": "karma start karma.conf.cjs --auto-watch=true --single-run=false",
     "test:update-snapshots": "karma start karma.conf.cjs --update-snapshots",
     "test:prune-snapshots": "karma start karma.conf.cjs --prune-snapshots",
-    "checksize": "rollup -c ; cat my-element.bundled.js | gzip -9 | wc -c ; rm my-element.bundled.js"
+    "checksize": "rollup -c ; cat my-element.bundled.js | gzip -9 | wc -c ; rm my-element.bundled.js",
+    "db-start": "json-server --watch db.json --port 3000"
   },
   "keywords": [
     "web-components",
@@ -36,7 +37,10 @@
   "author": "The Polymer Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "lit-element": "^2.3.1"
+    "http-server": "^14.1.1",
+    "json-server": "^0.17.3",
+    "lit-element": "^2.3.1",
+    "rollup-plugin-lit-css": "^4.0.1"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
